FEAT: add new pages and scss

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,2 +1,5 @@
 @import 'utils/variables';
 @import 'components/type';
+@import '_normalize.css';
+@import 'components/layout';
+@import 'components/list';
