--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -3,3 +3,11 @@ $c-alt: #e41612;
 $c-text: #444;
 
 $size-text: 18px;
+
+:root{
+    --color-bg: #F9FAF9;
+    --color-texte: #000000;
+    --color-btn: #D7AFDD;
+    --color-rec: #C1DFEF;
+    --color-rec--2: #FAE2C9;
+}
